# saas-analytics-lakehouse

./: .gitignore  README.md  pyproject.toml
conf/: project_config.yml
conf/schemas/: app_events.yml  experiments.yml  subscriptions.yml  support_feedback.yml  users_workspaces.yml
data/raw/2026-03-01/: app_events.csv  experiments.csv  subscriptions.csv  support_feedback.csv  users_workspaces.csv
data/raw/2026-03-05/: app_events.csv  experiments.csv  subscriptions.csv  support_feedback.csv  users_workspaces.csv
data/raw/2026-03-07_late_arrivals/: app_events.csv  support_feedback.csv
docs/: architecture.md  data_model.md  design_decisions.md  interview_talking_points.md  resume_bullets.md  sample_outputs.md
notebooks/: 00_setup_workspace.py  10_bronze_ingestion.py  20_silver_transforms.py  30_gold_metrics.py  40_llm_enrichment.py  50_quality_validation.py  60_export_summary.py
ops/: job_definition.yml  operational_checklist.md  runbook.md
src/creative_analytics_platform/: __init__.py  audit.py  config.py  contracts.py  llm.py  metrics.py  quality.py  runtime.py  transforms.py
tests/: test_config_and_contracts.py  test_llm_and_quality.py  test_metrics.py  test_transforms.py
