[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-saas-analytics-lakehouse"
version = "0.1.0"
description = "Creative SaaS product analytics lakehouse on Databricks-style architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Anupam Srivastava" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
databricks = ["pyspark>=3.5", "delta-spark>=3.2"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
